# pyBurstAnalysisGUI

./: .cvsignore  CMakeLists.txt  ChangeLog  SConscript  __file_list  azure-pipelines.yml  install.sh  uploadToStable.csh
data/: 4fgl_extendedData.txt
doc/: release.notes
python/: gtburst.py
python/GtBurst/: AutoHideScrollbar.py  BayesianBlocks.py  CommandPipeline.py  Configuration.py  ConsoleText.py  EntryPoint.py  FGLSelector.py  FuncFactory.py  GtBurstException.py  HyperlinkManager.py  IRFS.py  InteractiveFt1Display.py  LikelihoodComponent.py  RSPweight.py  SubWindow.py  Treeview.py  TriggerSelector.py  angularDistance.py  bkge.py  commandDefiner.py  cutout.py  dataCollector.py  dataHandling.py  downloadCallback.py  downloadTransientData.py  fancyFileDialogs.py  fast_ts_map.py  getDataPath.py  html2text.py  interactivePlots.py  likelihood_profile_writer.py  lleProgressBar.py  my_fits_io.py  plotTimeResolvedLike.py  statMethods.py  sunpos.py  updater.py  version.py  wcs_wrap.py  xmlModelGUI.py
python/GtBurst/aplpy/: __init__.py  angle_util.py  colorbar.py  contour_util.py  decorator.py  decorators.py  grid.py  labels.py  layers.py  logger.py  my_aplpy.py  normalize.py  overlays.py  regions.py  rgb.py  ticks.py
python/GtBurst/commands/: fits2png.py  fromLogToScript.py  gtbuildxmlmodel.py  gtburstInstTest.py  gtconvertxmlmodel.py  gtdocountsmap.py  gtdolike.py  gtdosed.py  gtdosimulation.py  gtdotsmap.py  gtdownloadGBMdata.py  gtdownloadLATdata.py  gtdownloadLLEdata.py  gteditxmlmodel.py  gteditxmlmodelsim.py  gtinteractiveRaDec.py  gtllebin.py  gtllebindef.py  (+5 more)
(+7 files in other folders)
